fixed links being covered by header

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,8 @@
 	border: 10px dashed #A38931;
 }
 
+/* Back to top button */
+
 .back-to-top-button {
 	width: 50px;
 	height: 50px;
@@ -26,6 +28,14 @@
 	font-weight: bold;
 	font-size: 2rem;
 	-webkit-text-stroke: 2px;
+}
+
+/* fix links */
+.anchor {
+	display: block;
+	height: 81.67px;
+	margin-top: -81.67px;
+	visibility: hidden;
 }
 
 /* Header-related styling */
